--- a/product-service/src/ES.ProductService.Application/ES.ProductService.Application.csproj
+++ b/product-service/src/ES.ProductService.Application/ES.ProductService.Application.csproj
@@ -6,4 +6,18 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="10.0.1" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Commands" />
+      <Folder Include="Queries" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ES.ProductService.Domain\ES.ProductService.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
