--- a/product-service/src/ES.ProductService.Api/ES.ProductService.Api.csproj
+++ b/product-service/src/ES.ProductService.Api/ES.ProductService.Api.csproj
@@ -6,4 +6,20 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ES.ProductService.Application\ES.ProductService.Application.csproj" />
+      <ProjectReference Include="..\ES.ProductService.Domain\ES.ProductService.Domain.csproj" />
+      <ProjectReference Include="..\ES.ProductService.Infrastructure\ES.ProductService.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Extensions" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+      <PackageReference Include="Serilog.Expressions" Version="3.2.1" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+    </ItemGroup>
+
 </Project>
