add entity framework support

--- a/product-service/src/ES.ProductService.Api/appsettings.json
+++ b/product-service/src/ES.ProductService.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ApplicationContext": "Host=localhost;Port=5432;Username=product;Password=product;Database=product_development;"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
