--- a/product-service/src/ES.ProductService.Infrastructure/ES.ProductService.Infrastructure.csproj
+++ b/product-service/src/ES.ProductService.Infrastructure/ES.ProductService.Infrastructure.csproj
@@ -10,4 +10,13 @@
       <ProjectReference Include="..\ES.ProductService.Application\ES.ProductService.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="11.0.1" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Mappings" />
+    </ItemGroup>
+
 </Project>
