--- a/product-service/src/ES.ProductService.Api/appsettings.json
+++ b/product-service/src/ES.ProductService.Api/appsettings.json
@@ -10,7 +10,15 @@
         "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-    "WriteTo": []
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+        }
+      }
+    ]
   },
   "AllowedHosts": "*"
 }
