--- a/product-service/src/ES.ProductService.Infrastructure/ES.ProductService.Infrastructure.csproj
+++ b/product-service/src/ES.ProductService.Infrastructure/ES.ProductService.Infrastructure.csproj
@@ -12,11 +12,8 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="11.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.ExpressionMapping" Version="5.0.0" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Mappings" />
     </ItemGroup>
 
 </Project>
