--- a/product-service/src/ES.ProductService.Application/ES.ProductService.Application.csproj
+++ b/product-service/src/ES.ProductService.Application/ES.ProductService.Application.csproj
@@ -8,8 +8,10 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="11.0.1" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
       <PackageReference Include="MediatR" Version="10.0.1" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
