add docker-compose for development

--- a/product-service/src/ES.ProductService.Api/appsettings.json
+++ b/product-service/src/ES.ProductService.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ApplicationContext": "Host=localhost;Port=5432;Username=product;Password=product;Database=product_development;"
+    "ApplicationContext": "host=localhost;Port=5432;Username=productUser;Password=productPassword;Database=product_development;"
   },
   "Serilog": {
     "MinimumLevel": {
