--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -30,7 +30,7 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore ${{env.PRODUCT_SLN}}
       
     - name: Build
       run: dotnet build ${{env.PRODUCT_SLN}}  --configuration Release --no-restore
