--- a/chat-service/src/ES.ChatService.Api/ES.ChatService.Api.csproj
+++ b/chat-service/src/ES.ChatService.Api/ES.ChatService.Api.csproj
@@ -6,4 +6,9 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+      <PackageReference Include="Serilog.Expressions" Version="3.3.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+    </ItemGroup>
 </Project>
