--- a/auth-service/src/EC.AuthService.Api/appsettings.Development.json
+++ b/auth-service/src/EC.AuthService.Api/appsettings.Development.json
@@ -1,8 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Clients": {
+    "product.service": {
+      "RedirectUris": [
+        "https://localhost:5002/signin-oidc"
+      ],
+      "PostLogoutRedirectUris": [
+        "https://localhost:5002/signout-callback-oidc"
+      ]
+    },
+    "chat.service": {
+      "RedirectUris": [
+        "https://localhost:5002/signin-oidc"
+      ],
+      "PostLogoutRedirectUris": [
+        "https://localhost:5002/signout-callback-oidc"
+      ]
     }
   }
 }
