add is4 configuration

--- a/auth-service/src/EC.AuthService.Api/appsettings.Development.json
+++ b/auth-service/src/EC.AuthService.Api/appsettings.Development.json
@@ -1,19 +1,23 @@
 {
+  "IdentityServer": {
+    "IssuerUri": "https://localhost:7231",
+    "LoginUrl": ""
+  },
   "Clients": {
     "product.service": {
       "RedirectUris": [
-        "https://localhost:5002/signin-oidc"
+        "https://localhost:7256/signin-oidc"
       ],
       "PostLogoutRedirectUris": [
-        "https://localhost:5002/signout-callback-oidc"
+        "https://localhost:7256/signout-callback-oidc"
       ]
     },
     "chat.service": {
       "RedirectUris": [
-        "https://localhost:5002/signin-oidc"
+        "https://localhost:7048/signin-oidc"
       ],
       "PostLogoutRedirectUris": [
-        "https://localhost:5002/signout-callback-oidc"
+        "https://localhost:7048/signout-callback-oidc"
       ]
     }
   }
