change project name

--- a/auth-service/src/EC.AuthService.Web/appsettings.Development.json
+++ b/auth-service/src/EC.AuthService.Web/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "IdentityServer": {
     "IssuerUri": "https://localhost:7231",
-    "LoginUrl": ""
+    "LoginUrl": "https://localhost:7231/signin"
   },
   "Clients": {
     "product.service": {
