--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,6 +9,7 @@ env:
   dotnet-version: '6.0.x'
   product-sln: 'product-service'
   chat-sln: 'chat-service'
+  auth-sln: 'auth-service'
 
 jobs:
   test-product-service:
@@ -53,4 +54,26 @@ jobs:
     
     - name: Test
       working-directory: ${{env.chat-sln}}
+      run: dotnet test --no-restore --verbosity normal
+      
+  test-auth-service:
+    name: test-auth-service-${{matrix.os}}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: ${{ env.dotnet-version }}
+
+    - name: Install dependencies
+      working-directory: ${{env.auth-sln}}
+      run: dotnet restore
+    
+    - name: Test
+      working-directory: ${{env.auth-sln}}
       run: dotnet test --no-restore --verbosity normal
