--- a/auth-service/src/EC.AuthService.Web/EC.AuthService.Web.csproj
+++ b/auth-service/src/EC.AuthService.Web/EC.AuthService.Web.csproj
@@ -7,11 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Ardalis.ApiEndpoints" Version="4.0.1" />
-      <PackageReference Include="bootstrap" Version="5.1.3" />
       <PackageReference Include="IdentityServer4" Version="4.1.2" />
       <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
-      <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.3" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
       <PackageReference Include="Serilog" Version="2.10.0" />
       <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
       <PackageReference Include="Serilog.Expressions" Version="3.3.0" />
