--- a/auth-service/src/EC.AuthService.Web/EC.AuthService.Web.csproj
+++ b/auth-service/src/EC.AuthService.Web/EC.AuthService.Web.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="11.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
       <PackageReference Include="IdentityServer4" Version="4.1.2" />
       <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
@@ -14,6 +16,27 @@
       <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
       <PackageReference Include="Serilog.Expressions" Version="3.3.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\EC.AuthService.Domain\EC.AuthService.Domain.csproj" />
+      <ProjectReference Include="..\EC.AuthService.Infrastructure\EC.AuthService.Infrastructure.csproj" />
+      <ProjectReference Include="..\ES.AuthService.Application\ES.AuthService.Application.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Account" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Account\Views\Shared\_Layout.cshtml" />
+      <_ContentIncludedByDefault Remove="Account\Views\SignIn.cshtml" />
+      <_ContentIncludedByDefault Remove="Account\Views\SignUp.cshtml" />
+      <_ContentIncludedByDefault Remove="Account\Views\_ViewImports.cshtml" />
+      <_ContentIncludedByDefault Remove="Properties\Views\Shared\_Layout.cshtml" />
+      <_ContentIncludedByDefault Remove="Properties\Views\SignIn.cshtml" />
+      <_ContentIncludedByDefault Remove="Properties\Views\SignUp.cshtml" />
+      <_ContentIncludedByDefault Remove="Properties\Views\_ViewImports.cshtml" />
     </ItemGroup>
 
 </Project>
