rename project and add docker-compose file for local deployment

--- a/auth-service/src/ES.AuthService.Application/ES.AuthService.Application.csproj
+++ b/auth-service/src/ES.AuthService.Application/ES.AuthService.Application.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\EC.AuthService.Domain\EC.AuthService.Domain.csproj" />
+      <ProjectReference Include="..\ES.AuthService.Domain\ES.AuthService.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
